--- a/app/index.html
+++ b/app/index.html
@@ -3,9 +3,149 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>course website</title>
 </head>
 <body>
-    
+    <div class="end">
+    <div class="course-wrap">
+        <div class="cover">
+      <section class="course">
+        <h1>Course Activity</h1>
+          <div class="notification-icon">
+            <img src ="/home/trainee/projectkabi1/course/app/assets/add-course.png" width="25" height="20" class="center">
+          </div>
+      </section>
+      <section class="date">
+         <div>
+        <h2>June 28th,2020</h2>
+        </div>
+    </section>
+    <section class="courses">
+        <div class="courses-head">
+        <p>Courses</p>
+        <img class="arrow-left"src="/home/trainee/projectkabi1/course/app/assets/slider-left.png" width="25" height="20" >
+        <img class="arrow-right"src="/home/trainee/projectkabi1/course/app/assets/slider-right.png" width="25" height="20" >
+        <div class="container-layout">
+        <img class="grid" src="/home/trainee/projectkabi1/course/app/assets/layout-grid.png">
+        <img class="list"src="/home/trainee/projectkabi1/course/app/assets/layout-list.png">
+        </div>
+    </div>
+    </section>
+    <section class="card-wrap">
+        <div class="card">
+          <div class="flex">
+            <div class="img">
+              <div class="facebook-img">
+                <img src="/home/trainee/projectkabi1/course/app/assets/courses-facebook.png" />
+              </div>
+              <div class="head-para">
+                <h3>How to grow your<br />facebook page</h3>
+                <p>follow these easy and<br />simple steps</p>
+              </div>
+            </div>
+            <div class="enroll-twelve">
+              <div class="number"><h2>12</h2></div>
+              <p>Enrolled</p>
+            </div>
+          </div>
+          <div class="foot">
+            <div class="progess"><div class="progress-grey"></div></div>
+            <div class="enroll-white">
+              <p>Enroll</p>
+              <img src="/home/trainee/projectkabi1/course/app/assets/enroll-white.png" alt="enroll-black.png" />
+            </div>
+          </div>
+        </div>
+      </section>
+      <div class="card1">
+        <div class="flex">
+          <div class="img">
+            <div class="facebook-img">
+              <img src="/home/trainee/projectkabi1/course/app/assets/courses-community.png" />
+            </div>
+            <div class="head-para">
+              <h3>Grow your<br />community</h3>
+              <p>follow these easy and<br />simple steps</p>
+            </div>
+          </div>
+          <div class="enroll-twelve">
+            <div class="number"><h2>7</h2></div>
+            <p>Enrolled</p>
+          </div>
+        </div>
+        <div class="foot">
+          <div class="progess1"><div class="progress-grey1"></div></div>
+          <div class="enroll-white">
+            <p>Enroll</p>
+            <img src="/home/trainee/projectkabi1/course/app/assets/enroll-white.png" alt="enroll-black.png" />
+          </div>
+        </div>
+      </div>
+    </section>
+    <div class="card2">
+        <div class="flex">
+          <div class="img">
+            <div class="facebook-img">
+              <img src="/home/trainee/projectkabi1/course/app/assets/courses-data-science.png" />
+            </div>
+            <div class="head-para">
+              <h3>Data Science<br />Bootcamp</h3>
+              <p>follow these easy and<br />simple steps</p>
+            </div>
+          </div>
+          <div class="enroll-twelve">
+            <div class="number"><h2>17</h2></div>
+            <p>Enrolled</p>
+          </div>
+        </div>
+        <div class="foot">
+          <div class="progess1"><div class="progress-grey1"></div></div>
+          <div class="enroll-white">
+            <p>Enroll</p>
+            <img src="/home/trainee/projectkabi1/course/app/assets/enroll-white.png" alt="enroll-black.png" />
+          </div>
+        </div>
+      </div>
+    </section>
+    <div class="card3">
+        <div class="flex">
+          <div class="img">
+            <div class="facebook-img">
+              <img src="/home/trainee/projectkabi1/course/app/assets/courses-target-audience.png" />
+            </div>
+            <div class="head-para">
+              <h3>Data Science<br />Bootcamp</h3>
+              <p>follow these easy and<br />simple steps</p>
+            </div>
+          </div>
+          <div class="enroll-twelve">
+            <div class="number"><h2>21</h2></div>
+            <p>Full</p>
+          </div>
+        </div>
+        <div class="foot">
+          <div class="progess1"><div class="progress-grey1"></div></div>
+          <div class="enroll-white">
+            <p>Enroll</p>
+            <img src="/home/trainee/projectkabi1/course/app/assets/enroll-white.png" alt="enroll-black.png" />
+          </div>
+        </div>
+      </div>
+    </div>
+    </section>
+</div>
+<div>
+<section class="profile">
+    <div class="flex1">
+        <image src="/home/trainee/projectkabi1/course/app/assets/slider-left.png" width="25" height="25"></image>
+
+    </div>
+</section>
+</div>
+  
+     
+   
+</div>
 </body>
 </html>
