--- a/app/index.html
+++ b/app/index.html
@@ -135,17 +135,93 @@
     </div>
     </section>
 </div>
-<div>
-<section class="profile">
-    <div class="flex1">
-        <image src="/home/trainee/projectkabi1/course/app/assets/slider-left.png" width="25" height="25"></image>
 
+<div class="right-side">
+  <div class="top-learning">
+    <div>
+      <img class="back-img" src="/home/trainee/projectkabi1/course/app/assets/back-icon.png" alt="back-img" />
+      <img
+        class="notification-img"
+        src=/home/trainee/projectkabi1/course/app/assets/notification.png
+        alt="notification-img"
+      />
     </div>
-</section>
-</div>
-  
-     
-   
-</div>
+    <div class="profile">
+      <div>
+        <h3>Wesley Mathews</h3>
+        <h5 class="student">student</h5>
+      </div>
+      <img
+        src="/home/trainee/projectkabi1/course/app/assets/profile.png"
+        alt="profile-img"
+        width="40px"
+        height="40px"
+      />
+    </div>
+    </div>
+    <div>
+     <h4 class="learn-background">My learning</h4>
+    </div>
+    <div class="percent">
+        <div class="percent-img">
+            <img class="learning-icon" src="/home/trainee/projectkabi1/course/app/assets/my-learning-icon1.png" alt="learning-icon">
+        </div>
+            <div class="learning-text">
+                <h4>Target Audience Training</h4>
+                <span>Save time and makes more effective by promoting</span>
+            </div>
+            <div>
+                <div class="progress-bar-target">
+                    <progress value="75" min="0" max="100" style="visibility:hidden;height:0;width:0;">75%</progress>
+                  </div>
+            </div>
+    </div>
+    <div class="complete-web">
+        <div class="percent-img">
+            <img class="learning-icon" src="/home/trainee/projectkabi1/course/app/assets/my-learning-icon2.png" alt="learning-icon">
+        </div>
+            <div class="learning-text">
+                <h4>The Complete Web...</h4>
+                <span>Learn web development by building 25websites</span>
+            </div>
+            <div>
+                <div class="progress-bar-web">
+                    <progress value="75" min="0" max="100" style="visibility:hidden;height:0;width:0;">75%</progress>
+                  </div>
+            </div>
+    </div>
+    <div class="grow-community">
+        <div class="percent-img">
+            <img class="learning-icon" src="/home/trainee/projectkabi1/course/app/assets/my-learning-icon3.png" alt="learning-icon">
+        </div>
+            <div class="learning-text">
+                <h4>Grow your community</h4>
+                <span>Follow these easy and simple steps</span>
+            </div>
+            <div>
+                <div class="progress-bar-grow">
+                    <progress value="75" min="0" max="100" style="visibility:hidden;height:0;width:0;">75%</progress>
+                  </div>
+            </div>
+    </div>
+    <div class="planning">
+        <h4>Planning</h4>
+        <div class="left-arrow">
+          <img src="/home/trainee/projectkabi1/course/app/assets/slider-left.png" alt="left-arrow" width="15px"/>
+        </div>
+        <div class="right-arrow" alt="right-arrow">
+          <img src="/home/trainee/projectkabi1/course/app/assets/slider-right.png"  width="15px"/>
+        </div>
+      </div>
+      <div>
+        <div class="calender">
+            <div class="cal">
+                <span>This week</span>
+                <span>Next week</span>
+                <span>This Month</span>
+                <span>This Year</span>
+            </div>
+        </div>
+      </div>
 </body>
 </html>
